test/sema/too-many-arguments.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def sum(a: int, b: int) -> int { return a + b; }

// CHECK: [[@LINE+1]]:24: error: too many arguments to 'sum', expected 2
def main() { var foo = sum(1, 2, 3); }
